force-app/main/default/objects/leaseworks__Legal_Entity__c/leaseworks__Legal_Entity__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_2406_Intercompany Routing</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intercompany Routings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>