force-app/main/default/objects/leaseworks__Legal_Entity__c/fields/leaseworks__GL_Account__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Account__c</fullName>
    <description>Code for the corresponding GL Account</description>
    <inlineHelpText>Code for the corresponding GL Account</inlineHelpText>
    <label>Z_unused_2001 GL Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>