force-app/main/default/objects/leaseworks__Legal_Entity__c/fields/leaseworks__GL_Subaccount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__GL_Subaccount__c</fullName>
    <description>Code for the corresponding GL Subaccount</description>
    <inlineHelpText>Code for the corresponding GL Subaccount</inlineHelpText>
    <label>Z_unused_2001 GL Subaccount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>