force-app/main/default/objects/leaseworks__Legal_Entity__c/fields/leaseworks__IC_Recievable_Desc__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__IC_Recievable_Desc__c</fullName>
    <formula>/*Intercompany_Receivable_GL_Account__r.GL_Account_Description__c*/
null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Z_Unused_2406_I/C Receivable Description</label>
    <type>Text</type>
</CustomField>