force-app/main/default/objects/leaseworks__Legal_Entity__c/validationRules/leaseworks__HL_Payable_Pct_0_to_100.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__HL_Payable_Pct_0_to_100</fullName>
    <active>false</active>
    <description>Rent Payable To Head Lease must be between 0 and 100%.</description>
    <errorConditionFormula>false /*OR( Rent_Payable_To_Head_Lease__c &lt;0, Rent_Payable_To_Head_Lease__c &gt;1 )*/</errorConditionFormula>
    <errorDisplayField>leaseworks__Rent_Payable_To_Head_Lease__c</errorDisplayField>
    <errorMessage>Rent Payable To Head Lease must be between 0 and 100%.</errorMessage>
</ValidationRule>