force-app/main/default/objects/leaseworks__Legal_Entity__c/listViews/leaseworks__All.listView-meta.xml
<ListView>
    <fullName>leaseworks__All</fullName>
    <columns>NAME</columns>
    <columns>leaseworks__Parent_Legal_Entity__c</columns>
    <columns>leaseworks__Intercompany_Receivable_GL_Account__c</columns>
    <columns>leaseworks__IC_Recievable_Desc__c</columns>
    <columns>leaseworks__Intercompany_Payable_GL_Account__c</columns>
    <columns>leaseworks__I_C_Payable_Description__c</columns>
    <columns>leaseworks__Rent_Payable_To_Head_Lease__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>